HomepageFeaturedExhibitions text-overflow fix

--- a/src/apps/HomePage/components/HomepageFeaturedExhibitions/HomepageExhibition.scss
+++ b/src/apps/HomePage/components/HomepageFeaturedExhibitions/HomepageExhibition.scss
@@ -26,6 +26,7 @@
   }
   &__title {
     overflow: hidden;
+    text-overflow: ellipsis;
     font-size: 18px;
     line-height: 24px;
     font-weight: 600;
@@ -33,6 +34,8 @@
     margin: 0;
   }
   &__description {
+    overflow: hidden;
+    text-overflow: ellipsis;
     margin: 0;
     font-size: 16px;
     line-height: 24px;
